--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <img src="static\figure\sup1.png" alt="Directional Weight Score" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
           </p>
           <p style="text-align: center;">
-            <img src="static\figure\sup2png" alt="Directional Weight Score" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
+            <img src="static\figure\sup2.png" alt="Directional Weight Score" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
           </p>
           <p>
             DAG achieves more accurate results in both seen and unseen settings.        </p>
