--- a/index.html
+++ b/index.html
@@ -57,26 +57,29 @@
               <!-- Paper authors -->
               
                 <span class="author-block">
-                  <a href="https://hq-king.github.io/" target="_blank">Hanqing Wang</a><sup>*+</sup>,</span>
+                  <a href="https://hq-king.github.io/" target="_blank">Hanqing Wang</a><sup>1*+</sup>,</span>
                   <span class="author-block">
-                    <a href="https://zhenhao-zhang.github.io/" target="_blank">Zhenhao Zhang</a><sup>*</sup>,</span>
+                    <a href="https://zhenhao-zhang.github.io/" target="_blank">Zhenhao Zhang</a><sup>2*</sup>,</span>
                     <span class="author-block">
-                      <a href="https://curmark.github.io/" target="_blank">Kaiyang Ji</a><sup>*</sup>,</span>
+                      <a href="https://curmark.github.io/" target="_blank">Kaiyang Ji</a><sup>2*</sup>,</span>
                       <span class="author-block">
-                      <a href="https://mingyulau.github.io/" target="_blank">Mingyu Liu</a><sup></sup>,</span>
+                      <a href="https://mingyulau.github.io/" target="_blank">Mingyu Liu</a><sup>3</sup>,</span>
                         <span class="author-block">
-                          <a href="https://github.com/WentiYin" target="_blank">Wenti Yin</a><sup></sup>,</span>
+                          <a href="https://github.com/WentiYin" target="_blank">Wenti Yin</a><sup>4</sup>,</span>
                           <span class="author-block">
-                            <a href="https://orcid.org/0009-0000-0473-7796" target="_blank">Yuchao Chen</a><sup></sup>,</span>
+                            <a href="https://orcid.org/0009-0000-0473-7796" target="_blank">Yuchao Chen</a><sup>4</sup>,</span>
                           <span class="author-block">
-                            <a href="https://zhirui86.github.io/" target="_blank">Zhirui Liu</a><sup></sup>,</span>
+                            <a href="https://zhirui86.github.io/" target="_blank">Zhirui Liu</a><sup>2</sup>,</span>
                             <span class="author-block">
-                            <a href="https://github.com/SherlockZhang666" target="_blank">Hangxing Zhang</a><sup></sup></span>
+                            <a href="https://github.com/SherlockZhang666" target="_blank">Hangxing Zhang</a><sup>2</sup></span>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Shanghai Artificial Intelligence Laboratory<br></span>
+                    <span class="author-block"><sup>1</sup>Shanghai Artificial Intelligence Laboratory<br></span>
+                    <span class="author-block"><sup>2</sup>ShanghaiTech University<br></span>
+                    <span class="author-block"><sup>3</sup>Zhejiang University<br></span>
+                    <span class="author-block"><sup>4</sup>Huazhong University of Science and Technology<br></span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                     <span class="eql-cntrb"><small><br><sup>+</sup>Indicates Corresponding Author</small></span>
                   </div>
@@ -209,9 +212,9 @@
     <div class="columns is-centered">
       <div class="column is-full">
         <div class="content">
-          <h2 class="title is-3">Unsampled Method</h2>
+          <h2 class="title is-3">Upsampled Method</h2>
          <p>
-              <img src="static\figure\unsample.png" alt="Directional Weight Score" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
+              <img src="static\figure\upsample.png" alt="Directional Weight Score" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
             </p>
             <p>
               We show the details of the Upsample method.Specifically, we use FPS and feature propagation to get the hierarchical point cloud features and upsample the sparse features into dense features</div>
