--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="columns is-centered">
       <div class="column is-full">
         <div class="content">
-          <h2 class="title is-3">Multi Source Affordance Decoder.</h2>
+          <h2 class="title is-3">Multi Source Affordance Decoder</h2>
          <p>
               <img src="static\figure\decoder.png" alt="Directional Weight Score" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
             </p>
