--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <span class="author-block">
                     <a href="https://zhenhao-zhang.github.io/" target="_blank">Zhenhao Zhang</a><sup>2*</sup>,</span>
                     <span class="author-block">
-                      <a href="https://curmark.github.io/" target="_blank">Kaiyang Ji</a><sup>2*</sup>,</span>
+                      <a href="https://curmack.github.io/" target="_blank">Kaiyang Ji</a><sup>2*</sup>,</span>
                       <span class="author-block">
                       <a href="https://mingyulau.github.io/" target="_blank">Mingyu Liu</a><sup>3</sup>,</span>
                         <span class="author-block">
