--- a/index.html
+++ b/index.html
@@ -57,31 +57,37 @@
               <!-- Paper authors -->
               
                 <span class="author-block">
-                  <a href="https://hq-king.github.io/" target="_blank">Hanqing Wang</a><sup>1*+</sup>,</span>
+                  <a href="https://hq-king.github.io/" target="_blank">Hanqing Wang</a><sup>1,4,6†*</sup>,</span>
                   <span class="author-block">
-                    <a href="https://zhenhao-zhang.github.io/" target="_blank">Zhenhao Zhang</a><sup>2*</sup>,</span>
+                    <a href="https://zhenhao-zhang.github.io/" target="_blank">Zhenhao Zhang</a><sup>2†</sup>,</span>
                     <span class="author-block">
-                      <a href="https://curmack.github.io/" target="_blank">Kaiyang Ji</a><sup>2*</sup>,</span>
+                      <a href="https://curmack.github.io/" target="_blank">Kaiyang Ji</a><sup>2†</sup>,</span>
                       <span class="author-block">
-                      <a href="https://mingyulau.github.io/" target="_blank">Mingyu Liu</a><sup>3</sup>,</span>
+                      <a href="https://mingyulau.github.io/" target="_blank">Mingyu Liu</a><sup>3,4</sup>,</span>
                         <span class="author-block">
-                          <a href="https://github.com/WentiYin" target="_blank">Wenti Yin</a><sup>4</sup>,</span>
+                          <a href="https://github.com/WentiYin" target="_blank">Wenti Yin</a><sup>6</sup>,</span>
                           <span class="author-block">
-                            <a href="https://orcid.org/0009-0000-0473-7796" target="_blank">Yuchao Chen</a><sup>4</sup>,</span>
+                            <a href="https://orcid.org/0009-0000-0473-7796" target="_blank">Yuchao Chen</a><sup>6</sup>,</span>
                           <span class="author-block">
                             <a href="https://zhirui86.github.io/" target="_blank">Zhirui Liu</a><sup>2</sup>,</span>
+                            <span class="author-block">
+                            <a href="https://lanxingxuan.github.io/" target="_blank">Xiangyu Zeng</a><sup>4,5</sup>,</span>
+                            <span class="author-block">
+                            <a href="https://shiki-ta.github.io/" target="_blank">Tianxiang Gui</a><sup>2</sup>,</span>
                             <span class="author-block">
                             <a href="https://github.com/SherlockZhang666" target="_blank">Hangxing Zhang</a><sup>2</sup></span>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Shanghai Artificial Intelligence Laboratory<br></span>
+                    <span class="author-block"><sup>1</sup>Hong Kong University of Science and Technology(GZ)<br></span>
                     <span class="author-block"><sup>2</sup>ShanghaiTech University<br></span>
                     <span class="author-block"><sup>3</sup>Zhejiang University<br></span>
-                    <span class="author-block"><sup>4</sup>Huazhong University of Science and Technology<br></span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                    <span class="eql-cntrb"><small><br><sup>+</sup>Indicates Corresponding Author</small></span>
+                    <span class="author-block"><sup>4</sup>Shanghai Artificial Intelligence Laboratory<br></span>
+                    <span class="author-block"><sup>5</sup>Nanjing University<br></span>
+                    <span class="author-block"><sup>6</sup>Huazhong University of Science and Technology<br></span>
+                    <span class="eql-cntrb"><small><br><sup>†</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
                   </div>
             </div>
           </div>
