--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Hong Kong University of Science and Technology(GZ)<br></span>
+                    <span class="author-block"><sup>1</sup>The Hong Kong University of Science and Technology (GZ)<br></span>
                     <span class="author-block"><sup>2</sup>ShanghaiTech University<br></span>
                     <span class="author-block"><sup>3</sup>Zhejiang University<br></span>
                     <span class="author-block"><sup>4</sup>Shanghai Artificial Intelligence Laboratory<br></span>
